// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Snackbar> renders 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        false,
        Object {
          "justifyContent": "flex-end",
          "padding": 16,
        },
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Array [
            Object {
              "backgroundColor": "transparent",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minWidth": 320,
              "position": "absolute",
            },
          ],
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 4,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 24,
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "maxWidth": 512,
                  "minWidth": 300,
                },
                Object {
                  "backgroundColor": "#000000",
                },
              ],
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          />
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 12,
                  "paddingHorizontal": 20,
                },
                false,
              ]
            }
          >
            <View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "marginTop": 16,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontSize": 14,
                        "lineHeight": 24,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "flex": 1,
                        "marginRight": 12,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Snackbar> when {button} 1`] = `
<share
  button="CLOSE"
  caption="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s."
  visible={true}
/>
`;

exports[`<Snackbar> when {caption} 1`] = `
<share
  caption="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s."
  visible={true}
/>
`;

exports[`<Snackbar> when {color} 1`] = `
<share
  button="CLOSE"
  caption="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s."
  visible={true}
/>
`;

exports[`<Snackbar> when {visible} (false) 1`] = `
<share
  caption="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s."
  visible={false}
/>
`;
